# proofgraph

./: .env.example  .gitignore  DESIGN.md  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/sample-repo/: README.md
examples/sample-repo/app/: admin.py
examples/sample-repo/docs/: negative-crypto.md
examples/sample-repo/infra/: baseline.yaml  logging.tf  network.yaml
proofgraph/: agent_mapper.py  chunking.py  cli.py  explain.py  graph.py  inventory.py  map_profile.py  profiles.py  redaction.py  retrieval.py  schemas.py  validate.py
proofgraph/bundled_profiles/: starter.yaml
proofgraph/bundled_sample/sample-repo/docs/: audit-review.md  monitoring.md
proofgraph/bundled_sample/sample-repo/infra/: security-pipeline.yaml
proofgraph/export/: csv_export.py  json_export.py  markdown_export.py
tests/: test_agent_mapper.py  test_cli.py  test_eval_fixtures.py  test_explain.py  test_export.py  test_graph.py  test_inventory.py  test_profiles.py  test_redaction.py  test_retrieval.py  test_validate.py
